--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.3.2",
+    "@openzeppelin/contracts-upgradeable": "^4.3.2",
     "@openzeppelin/upgrades": "^2.8.0",
     "chai": "^4.3.4",
     "dotenv": "^7.0.0",
