--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "homepage": "https://github.com/Instadapp/flashloan-aggregator#readme",
   "dependencies": {
     "@chainlink/contracts": "^0.2.2",
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
@@ -30,16 +29,18 @@
     "ethereum-waffle": "^3.4.0",
     "ethereumjs-abi": "^0.6.8",
     "ethers": "^5.4.7",
-    "hardhat": "^2.6.4",
     "hardhat-deploy": "^0.9.1",
     "hardhat-deploy-ethers": "^0.3.0-beta.10",
     "replace-in-file": "^6.2.0",
     "solc": "^0.6.12"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@openzeppelin/hardhat-upgrades": "^1.10.0",
     "@openzeppelin/test-helpers": "^0.5.13",
     "@tenderly/hardhat-tenderly": "^1.0.12",
+    "@types/dotenv": "^8.2.0",
+    "hardhat": "^2.6.7",
     "hardhat-gas-reporter": "^1.0.4",
     "solidity-coverage": "^0.7.17"
   }
