added test folders for different changes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index",
   "scripts": {
     "compile": "hardhat compile",
-    "test": "hardhat run scripts/global-test.ts",
+    "test": "hardhat run scripts/global-tests.ts",
     "test:runner": "hardhat run scripts/run-tests.ts"
   },
   "repository": {
