--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-ALCHEMY_API_KEY = ''
+ALCHEMY_API_KEY = 
 MNEMONIC = test test test test test test test test test test test beginnnnnnn
-SCAN_API_KEY = ''
+SCAN_API_KEY = 
+PRIVATE_KEY = 
