--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Instadapp/flashloan-aggregator#readme",
   "dependencies": {
     "@chainlink/contracts": "^0.2.2",
+    "@eth-optimism/contracts": "^0.5.16",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.4.0",
