--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@types/mocha": "^9.0.0",
     "hardhat": "^2.6.7",
     "hardhat-gas-reporter": "^1.0.4",
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solidity-coverage": "^0.7.17",
     "ts-node": "^10.4.0"
   }
