--- a/package.json
+++ b/package.json
@@ -52,9 +52,10 @@
     "@types/fs-extra": "^9.0.13",
     "@types/inquirer": "^8.1.3",
     "@types/mocha": "^9.0.0",
-    "hardhat": "^2.6.7",
+    "hardhat": "^2.17.0",
     "hardhat-gas-reporter": "^1.0.4",
     "solidity-coverage": "^0.7.17",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "typescript": "^5.2.2"
   }
 }
