--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@types/mocha": "^9.0.0",
     "hardhat": "^2.6.7",
     "hardhat-gas-reporter": "^1.0.4",
+    "prettier": "^3.2.5",
+    "prettier-plugin-solidity": "^1.3.1",
     "solidity-coverage": "^0.8.0",
     "ts-node": "^10.4.0",
     "typescript": "^5.2.2"
